fix alignment on make an impact #156

--- a/sites/all/themes/ds/sass/ds/dosomething_panels_mini_home_page.sass
+++ b/sites/all/themes/ds/sass/ds/dosomething_panels_mini_home_page.sass
@@ -139,7 +139,7 @@ $impactbubbles-sprite-dimensions: true
       // @extend .ds-dropdown
       background: $gray-lighter2
       width: 100px
-      margin-top: 7px
+      margin-top: 13px
       +link-colors($white, $white, $c-select-link-hover, $white, false)
       .selectBox-label
         width: 95%
@@ -156,14 +156,14 @@ $impactbubbles-sprite-dimensions: true
     @extend .impactbubbles-impact-bubble-where
     top: 114px
     .selectBox-dropdown
-      margin-top: 5px
+      margin-top: 10px
   .form-item-how-long
     @extend .impactbubbles-impact-bubble-how-long
     left: 200px
     top: 114px
     padding: 0 0.5em 0 14px
     .selectBox-dropdown
-      margin-top: 5px
+      margin-top: 10px
   .dude
     @extend .impactbubbles-impact-bubble-dude
     position: absolute
